Allow usage of virtual threads to be disabled.